--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -11,7 +11,10 @@ jobs:
     name: Create version number
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+      with:
+        lfs: true
+        token: ${{ secrets.ACCESS_TOKEN }}
     - name: Fetch all history for all tags and branches
       run: |
         git fetch --prune --depth=10000
@@ -34,7 +37,10 @@ jobs:
     needs: [ version ]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+      with:
+        lfs: true
+        token: ${{ secrets.ACCESS_TOKEN }}
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
