--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         git fetch --prune --depth=10000
     - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v0.9.2
+      uses: gittools/actions/gitversion/setup@master
       with:
           versionSpec: '5.2.x'
     - name: Use GitVersion
