--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -64,6 +64,6 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
-        token: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.ACCESS_TOKEN }}
         tag: ${{ steps.version.outputs.content }}
         commit: ${{ github.sha }}
