--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build APK and Create release
+    name: Test APK
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
